checking memory setup 2