@@ -16,6 +16,8 @@ RUN ./gradlew build || return 0
 FROM openjdk:8
 LABEL author="Ibrahim Bilge <Ibrahim.Bilge@opuscapita.com>"
 
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm"
+
 ENV APP_HOME=/usr/app/
 WORKDIR $APP_HOME
 
@@ -30,4 +32,4 @@ HEALTHCHECK --interval=15s --timeout=30s --start-period=40s --retries=15 \
   CMD curl --silent --fail http://localhost:3039/api/health/check || exit 1
 
 EXPOSE 3039
-ENTRYPOINT ["java","-jar","peppol-validator.jar"]
+ENTRYPOINT exec java $JAVA_OPTS -jar peppol-validator.jar
